fixed scrollbar further only functional changes

--- a/src/VisitList/VisitList.css
+++ b/src/VisitList/VisitList.css
@@ -19,7 +19,7 @@
 
 /* полоса прокрутки (скроллбар) */
 ::-webkit-scrollbar {
-  width: 4px; /* ширина для вертикального скролла */
+  width: 6px; /* ширина для вертикального скролла */
   height: 4px; /* высота для горизонтального скролла */
 }
 
